# hf-agent-course-final-assignment

./: .gitignore  README.md  audio_agent_graph.md  config.py  graph.md  hf_client.py  main.py  pyproject.toml  youtube_analyst.md
graphs/: audio_agent.py
prompts/: analyze_audio_system_prompt.md  analyze_youtube_system_prompt.md  content_query_system_prompt.md  execution_system_prompt.md  format_answer_system_prompt.md  planning_system_prompt.md  reasoning_system_prompt.md  task_summarization_prompt.md  triage_system_prompt.md
tests/: test_analyze_video.py  test_analyze_youtube.py
tools/: __init__.py  analyze_video.py  analyze_youtube.py  delegate_to_smart_agent.py  query_resource.py  search_arxiv.py  search_web.py
utils/: YouTubeVideo.py  __init__.py  prompt_loader.py
web_scraper/: __init__.py  extract_text.py  fetch_html.py
